--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "poly-descriptor",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "poly-descriptor": "./index.js"
+    "poly-descriptor": "node index.js"
   },
   "repository": {
     "type": "git",
