--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "poly-descriptor": "node index.js"
+    "poly-descriptor": "./index.js"
   },
   "repository": {
     "type": "git",
